# leftovers-cafe

./: .editorconfig  Procfile  pyproject.toml  settings.py  urls.py
app/inventory/: forms.py  models.py  views.py
app/inventory/migrations/: 0001_initial.py
app/payment/: models.py  tasks.py  views.py
app/payment/migrations/: 0001_initial.py
datadog/: prerun.sh
lib/: tracing.py
templates/inventory/: _leftovers-card.html  leftovers_confirm_delete.html  leftovers_detail.html  leftovers_form.html  leftovers_list.html
templates/payment/: purchase_confirm.html
templates/web/: base.html
